--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
         <h1 class="title"> Anime MindSnap  </h1>
         </div>
     </header>
-    <!-- This section represents a container with a class "index-bg". It's likely used as a background container for a specific section of the webpage. -->
 
-        <!-- Start of navigation Panel S -->
+        <!-- Start of navigation Panel-->
         
         <!-- The following div contains a container for centering content horizontally, covering the entire width of the viewport, and applying text-center alignment. -->
         <div class="container justify-content-center w-100 text-center">
